--- a/core/templates/listar_users.html
+++ b/core/templates/listar_users.html
@@ -26,7 +26,7 @@
                         <td>{{ user.perfil.cargo }}</td>
                         <td class="actions">
 						<a class="btn btn-danger btn-xs"  href="{% url 'core:delete' user.id %}">Excluir</a>
-						<a class="btn btn-warning btn-xs" href="{% url 'core:atualizar' user.perfil.id %}">Editar</a>
+						<a class="btn btn-warning btn-xs" href="{% url 'core:atualizar' user.id %}">Editar</a>
 						
 				</tr>
                  {% endfor %}
